samples/_failures_safe/1761515095_7a0fc5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b621b02b.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b621b02b.c:179:29: error: ‘lex’ undeclared (first use in this function); did you mean ‘lexer’?
  179 |         char current = peek(lex
      |                             ^~~
      |                             lexer
./samples/SAFE/__tmp_b621b02b.c:179:29: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b621b02b.c:179:32: error: expected ‘)’ at end of input
  179 |         char current = peek(lex
      |                            ~   ^
      |                                )
./samples/SAFE/__tmp_b621b02b.c:179:9: error: expected declaration or statement at end of input
  179 |         char current = peek(lex
      |         ^~~~
./samples/SAFE/__tmp_b621b02b.c:179:9: error: expected declaration or statement at end of input
